--- a/.github/workflows/issue-comment-bot.yml
+++ b/.github/workflows/issue-comment-bot.yml
@@ -5,31 +5,32 @@ on:
     types: [labeled]
 
 jobs:
-  auto-comment:
+  comment-on-label:
     runs-on: ubuntu-latest
-    if: github.event.label.name == 'completed' || github.event.label.name == 'enhancement' || github.event.label.name == 'bug'
+    permissions:
+      issues: write
     steps:
-      - name: Post comment based on label
+      - name: Comment based on label
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const label = context.payload.label.name;
-            let comment = '';
+            const issueNumber = context.payload.issue.number;
             
-            if (label === 'completed') {
-              comment = 'This issue has been resolved. Thank you for your contribution!';
-            } else if (label === 'enhancement') {
-              comment = 'Thanks for the enhancement suggestion! We appreciate your input.';
-            } else if (label === 'bug') {
-              comment = 'Thank you for reporting this bug. Our team will investigate and fix it.';
-            }
+            const labelComments = {
+              'completed': 'This issue has been resolved. Thank you for your contribution!',
+              'enhancement': 'Thanks for the enhancement suggestion! We appreciate your input.',
+              'bug': 'Thank you for reporting this bug. Our team will investigate and fix it.'
+            };
             
-            if (comment) {
-              github.rest.issues.createComment({
-                issue_number: context.issue.number,
+            if (labelComments[label]) {
+              await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                body: comment
+                issue_number: issueNumber,
+                body: labelComments[label]
               });
+              console.log(`Posted comment for label: ${label}`);
+            } else {
+              console.log(`No comment configured for label: ${label}`);
             }
